# Zonos-RunPod

./: .dockerignore  CLAUDE.md  Dockerfile  JOURNAL.md  docker-compose.yml  gradio_interface.py  pyproject.toml  startup.sh
.github/workflows/: docker-build-push.yml
