[project]
name = "zonos"
version = "0.1.0"
description = "Text-to-speech by Zyphra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "setuptools",
    "packaging",
    "inflect>=7.5.0",
    "kanjize>=1.5.0",
    "numpy>=2.2.2",
    "phonemizer>=3.3.0",
    "sudachidict-full>=20241021",
    "sudachipy>=0.6.10",
    "transformers>=4.48.1",
    "soundfile>=0.13.1",
    "huggingface-hub>=0.28.1",
    "gradio==5.16.1",
]

# These are technically optional, but mamba-ssm is required to run hybrid models.
[project.optional-dependencies]
compile = [
    # These are commented out due to build/compatibility issues
    # "flash-attn>=2.7.3",  # Conflicts with transformers
    # "mamba-ssm>=2.2.4",   # No pre-built wheels
    # "causal-conv1d>=1.5.0.post8",  # No pre-built wheels
]

[tool.setuptools.packages.find]
include = ["zonos"]

[tool.ruff]
line-length = 120
